...
    "highResolution.view.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "High resolution"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Haute résolution\n"
...
    "search.view.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Search"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Recherche"
...
